Added I2C Device. Now we use the linux i2c-dev support to access bus devices using ioctrls.
git-svn-id: file:///media/hdbkp/svn/c3/trunk/cbox@41 c892b811-77a8-453b-ad2f-bbcecf767e94

--- a/src/devices/Makefile.am
+++ b/src/devices/Makefile.am
@@ -18,6 +18,7 @@ SOURCES = DeviceFactory.h DeviceFactory.ih DeviceFactory.cpp
 SOURCES+= DeviceGPIO.h DeviceGPIO.ih DeviceGPIO.cpp
 SOURCES+= DeviceAnalogSensors.h DeviceAnalogSensors.ih DeviceAnalogSensors.cpp
 SOURCES+= DeviceDigitalSensors.h DeviceDigitalSensors.ih DeviceDigitalSensors.cpp
+SOURCES+= DeviceI2CBus.h DeviceI2CBus.ih DeviceI2CBus.cpp
 SOURCES+= DeviceSerial.h DeviceSerial.ih DeviceSerial.cpp
 # SOURCES+= DeviceOdometer.h DeviceOdometer.ih DeviceOdometer.cpp
 # SOURCES+= DeviceGPS.h DeviceGPS.ih DeviceGPS.cpp
