Added new Te devices support
git-svn-id: file:///media/hdbkp/svn/c3/trunk/cbox@141 c892b811-77a8-453b-ad2f-bbcecf767e94

--- a/src/devices/te/Makefile.am
+++ b/src/devices/te/Makefile.am
@@ -10,7 +10,11 @@ AUTOMAKE_OPTIONS = foreign 1.4
 INCLUDES	= -I@top_srcdir@
 
 SOURCES = DeviceTE.h DeviceTE.ih DeviceTE.cpp
-SOURCES+= SampiTE.h SampiTE.ih SampiTE.cpp
+SOURCES+= Sampi500.h Sampi500.ih Sampi500.cpp
+SOURCES+= Sampi550.h Sampi550.ih Sampi550.cpp
+SOURCES+= VegaII.h VegaII.ih VegaII.cpp
+SOURCES+= Isoil.h Isoil.ih Isoil.cpp
+SOURCES+= Somefi.h Somefi.ih Somefi.cpp
 
 noinst_LTLIBRARIES	= libte.la
 libte_la_SOURCES	= $(SOURCES)
