Initial porting to C3-Ax03
This patch add support for C3-Ax03 platform and opeembedded toolchain.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,19 +10,19 @@ INCLUDES = -I@top_srcdir@
 
 noinst_LTLIBRARIES		= libcontrolbox.la
 libcontrolbox_la_SOURCES	=
-libcontrolbox_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@
+libcontrolbox_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
 libcontrolbox_la_LIBADD 	= base/libbase.la devices/libdevices.la \
-					@CCGNU2_LIBS@
+					@CCGNU2_LIBS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
 
 bin_PROGRAMS 		= cboxtest cbox
 
 cboxtest_SOURCES	= cboxtest.cpp
-cboxtest_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@
-cboxtest_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@
+cboxtest_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
+cboxtest_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@ @LOG4CPP_CFLAGS@
 cboxtest_LDADD		= libcontrolbox.la
 
 cbox_SOURCES	= cbox.cpp
-cbox_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@
-cbox_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@
+cbox_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
+cbox_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@ @LOG4CPP_CFLAGS@
 cbox_LDADD	= libcontrolbox.la
 
