--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -24,6 +24,6 @@ SOURCES+= base64.h base64.c
 
 noinst_LTLIBRARIES	= libbase.la
 libbase_la_SOURCES	= $(SOURCES)
-libbase_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @LOG4CPP_CFLAGS@
-libbase_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @LOG4CPP_LIBS@
+libbase_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @LOG4CPP_CFLAGS@ @LOG4CPP_CFLAGS@
+libbase_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @LOG4CPP_LIBS@ @LOG4CPP_CFLAGS@
 libbase_la_LIBADD	= comsys/libcomsys.la
