--- a/src/devices/gprs/Makefile.am
+++ b/src/devices/gprs/Makefile.am
@@ -16,5 +16,5 @@ SOURCES+= EnforaAPI.h EnforaAPI.ih EnforaAPI.cpp
 
 noinst_LTLIBRARIES	= libgprs.la
 libgprs_la_SOURCES	= $(SOURCES)
-libgprs_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@
-libgprs_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@
+libgprs_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
+libgprs_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@ @LOG4CPP_CFLAGS@
