--- a/src/devices/te/Makefile.am
+++ b/src/devices/te/Makefile.am
@@ -18,5 +18,5 @@ SOURCES+= Somefi.h Somefi.ih Somefi.cpp
 
 noinst_LTLIBRARIES	= libte.la
 libte_la_SOURCES	= $(SOURCES)
-libte_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@
-libte_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@
+libte_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
+libte_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@ @LOG4CPP_LIBS@
