--- a/src/base/comsys/Makefile.am
+++ b/src/base/comsys/Makefile.am
@@ -23,5 +23,5 @@ SOURCES+= CommandGenerator.h CommandGenerator.ih CommandGenerator.cpp
 
 noinst_LTLIBRARIES	= libcomsys.la
 libcomsys_la_SOURCES	= $(SOURCES)
-libcomsys_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @LOG4CPP_CFLAGS@
-libcomsys_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @LOG4CPP_LIBS@
+libcomsys_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
+libcomsys_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@ @LOG4CPP_LIBS@
