--- a/src/devices/atgps/Makefile.am
+++ b/src/devices/atgps/Makefile.am
@@ -13,5 +13,5 @@ SOURCES = DeviceATGPS.h DeviceATGPS.ih DeviceATGPS.cpp
 
 noinst_LTLIBRARIES	= libatgps.la
 libatgps_la_SOURCES	= $(SOURCES)
-libatgps_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@
-libatgps_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@
+libatgps_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
+libatgps_la_LDFLAGS	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@ @LOG4CPP_LIBS@
