Added support for GPIO control using libsysfs
This patch provide upport for GPIO control using libsysfs.
The support has been added by refactoring the previous code in order to keep
platform independant code into the DeviceGPIO super-calss and implementing
low-level GPIO access methods into the DeviceGPIOAxis and DeviceGPIOLib
new classes.

The base class DeviceGPIO now implement platform-independant control policies,
such as modem ON/OFF precedures and mutex locks. The new classes provide only
the mapping to low level GPIO control mechanism: ioctl for AXIS and a more
platform-independant support using libsysfs i.e. for Atmel based board.

--- a/src/devices/Makefile.am
+++ b/src/devices/Makefile.am
@@ -16,6 +16,12 @@ INCLUDES = -I@top_srcdir@
 
 SOURCES = DeviceFactory.h DeviceFactory.ih DeviceFactory.cpp
 SOURCES+= DeviceGPIO.h DeviceGPIO.ih DeviceGPIO.cpp
+if CRIS_COMPILE
+SOURCES+= DeviceGPIOAxis.h DeviceGPIOAxis.ih DeviceGPIOAxis.cpp
+endif
+if ARM_COMPILE
+SOURCES+= DeviceGPIOLib.h DeviceGPIOLib.ih DeviceGPIOLib.cpp
+endif
 SOURCES+= DeviceAnalogSensors.h DeviceAnalogSensors.ih DeviceAnalogSensors.cpp
 SOURCES+= DeviceDigitalSensors.h DeviceDigitalSensors.ih DeviceDigitalSensors.cpp
 SOURCES+= DeviceI2CBus.h DeviceI2CBus.ih DeviceI2CBus.cpp
@@ -31,8 +37,8 @@ SOURCES+= PollEventGenerator.h PollEventGenerator.ih PollEventGenerator.cpp
 
 noinst_LTLIBRARIES	= libdevices.la
 libdevices_la_SOURCES	= $(SOURCES)
-libdevices_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@
-libdevices_la_LDFLAGS 	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@ @LOG4CPP_CFLAGS@
+libdevices_la_CXXFLAGS	= $(CONTROLBOX_CFLAGS) @CCGNU2_CFLAGS@ @CCEXT2_CFLAGS@ @LOG4CPP_CFLAGS@ @SYSFS_CFLAGS@
+libdevices_la_LDFLAGS 	= $(CONTROLBOX_LDFLAGS) @CCGNU2_LIBS@ @CCEXT2_LIBS@ @LOG4CPP_LIBS@ @SYSFS_LIBS@
 libdevices_la_LIBADD	= te/libte.la \
 				atgps/libatgps.la \
 				gprs/libgprs.la \
